# FreeRTOS-Emulator

./: .gitignore  .gitmodules  .stickler.yml  .travis.yml  AsyncIO_8c.html  AsyncIO_8h.html  AsyncIO_8h_source.html  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  TUM__Ball_8c.html  TUM__Ball_8h.html  TUM__Ball_8h_source.html  TUM__Draw_8c.html  TUM__Draw_8h.html  TUM__Draw_8h_source.html  TUM__Event_8c.html  TUM__Event_8h.html  TUM__Event_8h_source.html  TUM__Font_8c.html  TUM__Font_8h.html  TUM__Font_8h_source.html  TUM__FreeRTOS__Utils_8c.html  TUM__FreeRTOS__Utils_8h.html  TUM__FreeRTOS__Utils_8h_source.html  TUM__Print_8c.html  TUM__Print_8h.html  TUM__Print_8h_source.html  TUM__Sound_8c.html  TUM__Sound_8h.html  TUM__Sound_8h_source.html  TUM__Utils_8c.html  TUM__Utils_8h.html  TUM__Utils_8h_source.html  annotated.html  classes.html  container_base_setup_fail.md  dir_203e2a952df2a2926025df2e3d5a6e07.html  dir_78f3fbf8ee41d2d2471877ffbc29fe51.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  (+172 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md
.github/workflows/: main.yml
FreeRTOS_Posix/: .cproject  .gdbinit  .gitignore  .project  CMakeLists.txt  main.c
FreeRTOS_Posix/AsyncIO/: AsyncIOSerial.c
FreeRTOS_Posix/Code/: FreeRTOS_Posix  makefile  sources.mk  subdir.mk
FreeRTOS_Posix/Code/Draw/: TUM_Draw.c  TUM_Draw.h  subdir.mk
FreeRTOS_Posix/Code/FileIO/: subdir.mk
FreeRTOS_Posix/Debug/: FreeRTOS_Posix  makefile  sources.mk  subdir.mk
FreeRTOS_Posix/Debug/AsyncIO/: subdir.mk
FreeRTOS_Posix/Debug/Common_Demo/Full/: subdir.mk
FreeRTOS_Posix/Debug/Common_Demo/Minimal/: subdir.mk
FreeRTOS_Posix/Debug/Demo_Common/Full/: subdir.mk
FreeRTOS_Posix/Debug/FileIO/: subdir.mk
FreeRTOS_Posix/Debug/FreeRTOS_Kernel/: subdir.mk
FreeRTOS_Posix/Debug/FreeRTOS_Kernel/portable/GCC/Posix/: subdir.mk
FreeRTOS_Posix/Debug/FreeRTOS_Kernel/portable/MemMang/: subdir.mk
FreeRTOS_Posix/Debug/Kernel_Common/portable/GCC/Posix/: subdir.mk
FreeRTOS_Posix/Debug/Kernel_Source/: subdir.mk
FreeRTOS_Posix/Debug/Lib/Full/: subdir.mk
FreeRTOS_Posix/Debug/Lib/Minimal/: subdir.mk
FreeRTOS_Posix/Debug/ParTest/: subdir.mk
FreeRTOS_Posix/Draw/: Draw_Circle.c  Draw_Ellipse.c  Draw_FillCircle.c  Draw_FillEllipse.c  Draw_FillRound.c  Draw_HLine.c  Draw_Line.c  Draw_Pixel.c  Draw_Rect.c  Draw_Round.c  Draw_VLine.c  SDL_draw.c  TUM_Draw.c  TUM_Event.c
FreeRTOS_Posix/Draw/include/: TUM_Draw.h  TUM_Event.h
FreeRTOS_Posix/FileIO/: fileIO.c
FreeRTOS_Posix/FreeRTOS_Kernel/portable/GCC/Posix/: port.c
FreeRTOS_Posix/Lib/include/: SDL_draw.h
FreeRTOS_Posix/ParTest/: ParTest.c
FreeRTOS_Posix/Release/: makefile  sources.mk  subdir.mk
FreeRTOS_Posix/Release/AsyncIO/: subdir.mk
FreeRTOS_Posix/Release/Common_Demo/Full/: subdir.mk
FreeRTOS_Posix/Release/Common_Demo/Minimal/: subdir.mk
FreeRTOS_Posix/Release/FileIO/: subdir.mk
FreeRTOS_Posix/Release/FreeRTOS_Kernel/: subdir.mk
FreeRTOS_Posix/Release/FreeRTOS_Kernel/portable/GCC/Posix/: subdir.mk
FreeRTOS_Posix/Release/FreeRTOS_Kernel/portable/MemMang/: subdir.mk
FreeRTOS_Posix/Release/ParTest/: subdir.mk
FreeRTOS_Posix/Src/: FreeRTOS_Posix  subdir.mk
FreeRTOS_Posix/Src/AsyncIO/: subdir.mk
FreeRTOS_Posix/Src/Common_Demo/Full/: subdir.mk
FreeRTOS_Posix/Src/Demo/Common/Full/: subdir.mk
FreeRTOS_Posix/Src/Demo/Common/Minimal/: subdir.mk
FreeRTOS_Posix/Src/FreeRTOS_Kernel/portable/GCC/Posix/: subdir.mk
FreeRTOS_Posix/Src/Kernel_Common/: subdir.mk
FreeRTOS_Posix/Src/Kernel_Source/portable/GCC/Posix/: subdir.mk
FreeRTOS_Posix/Src/Kernel_Source/portable/MemMang/: subdir.mk
FreeRTOS_Posix/lib/Gfx/: TUM_Draw.c
FreeRTOS_Posix/lib/Gfx/include/: TUM_Draw.h
FreeRTOS_Posix/src/: main.c
FreeRTOS_Simulator/: CMakeLists.txt
FreeRTOS_Simulator/cmake/: FindSDL2_ttf.cmake
FreeRTOS_Simulator/doc/: Doxyfile
FreeRTOS_Simulator/include/: FreeRTOSConfig.h
FreeRTOS_Simulator/lib/AsyncIO/: AsyncIOSerial.c
FreeRTOS_Simulator/lib/FreeRTOS_Kernel/portable/GCC/Posix/: port.c  portmacro.h
FreeRTOS_Simulator/lib/Gfx/: TUM_Ball.c  TUM_Draw.c  TUM_Event.c  TUM_Sound.c  TUM_Utils.c
FreeRTOS_Simulator/lib/Gfx/include/: TUM_Ball.h  TUM_Draw.h  TUM_Event.h  TUM_Sound.h  TUM_Utils.h
FreeRTOS_Simulator/src/: main.c
cmake/: init_local_projects.cmake  init_remote_projects.cmake  tests.cmake
config/vscode/: c_cpp_properties.local.json.in  c_cpp_properties.remote.json.in  extensions.local.json.in  extensions.remote.json.in  launch.local.json.in  launch.remote.docker.json.in  launch.remote.vm.json.in  settings.remote.json.in  tasks.local.json.in  tasks.remote.docker.json.in  tasks.remote.vm.json.in
docker/: Makefile
docs/: Doxyfile
include/: EmulatorConfig.h  FreeRTOSConfig.h  UDP_data.h  async_message_queues.h  async_sockets.h  buttons.h  defines.h  demo_tasks.h  draw.h  main.h  pong.h  state_machine.h  states.h
lib/: ll.h
lib/AsyncIO/: AsyncIO.c  AsyncIO.h  AsyncIOMsgQueues.h  AsyncIOSerial.c  AsyncIOSerial.h  AsyncIOSocket.h
lib/FreeRTOS_Kernel/: croutine.c  list.c  queue.c  tasks.c  timers.c
lib/Gfx/: TUM_Ball.c  TUM_Draw.c  TUM_Event.c  TUM_Font.c  TUM_FreeRTOS_Utils.c  TUM_Print.c  TUM_Sound.c  TUM_Utils.c  gfx_FreeRTOS_utils.c  gfx_ball.c  gfx_draw.c  gfx_event.c  gfx_font.c  gfx_print.c  gfx_sound.c  gfx_utils.c
opponents/: README.md  TETRIS.md  pong_opponent  pong_opponent_armv7l  space_invaders_opponent  tetris_generator  tetris_generator_armv7l
remote/: Makefile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  (+89 more)
src/: async_message_queues.c  async_sockets.c  buttons.c  demo_tasks.c  draw.c  main.c  pong.c  state_machine.c  states.c  tags
(+33 files in other folders)
